Added links to images

--- a/main.css
+++ b/main.css
@@ -15,7 +15,7 @@ body {
     width: 100%;
     background-position: center;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/backyard copy.jpeg');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/backyard%20copy.jpeg?raw=true');
     font-family: Helvetica;
     font-size: 370px;
     color: #FF1493;
@@ -67,7 +67,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/AirbnbMock.jpg');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMock.jpg?raw=true');
     border: 2px solid black;
 }
 
@@ -76,7 +76,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/airbnbmock.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true');
     border: 2px solid black;
 }
 
@@ -87,7 +87,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/WeLoveDaily.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true');
     border: 2px solid black;
 }
 
@@ -96,7 +96,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/WeLoveDailyMock.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDailyMock.png?raw=true');
     border: 2px solid black;
 }
 
@@ -105,7 +105,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/NatGeo.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true');
     border: 2px solid black;
 }
 
@@ -114,7 +114,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/NatGeoMock.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeoMock.png?raw=true');
     border: 2px solid black;
 }
 
@@ -123,7 +123,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/Sill.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Sill.png?raw=true');
     border: 2px solid black;
 }
 
@@ -132,7 +132,7 @@ body {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/Chill.png');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Chill.png?raw=true');
     border: 2px solid black;
 }
 
@@ -149,7 +149,7 @@ body {
     align-self: center;
     background-position: center;
     background-size: cover;
-    background-image: url('/Users/crackhead/Desktop/Code/portfolio/img/IMG_6329.JPG');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/IMG_6329.JPG?raw=true');
     border: 2px solid black;
 }
 
