--- a/main.css
+++ b/main.css
@@ -162,6 +162,7 @@ body {
 @media (max-width: 700px) {
     .hero {
         height: 50vh;
+        width: 100vw;
         font-size: 120px;
         text-align: center;
     }
@@ -171,8 +172,13 @@ body {
     }
 
     .heading {
+        margin-top: 3%;
         font-size: 44px;
         text-align: center;
+    }
+
+    .images {
+        padding: 5%;
     }
 
     .images__heading {
