--- a/main.css
+++ b/main.css
@@ -161,6 +161,9 @@ body {
 
 @media (max-width: 700px) {
     .hero {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-evenly;
         height: 50vh;
         width: 100vw;
         font-size: 120px;
@@ -168,12 +171,12 @@ body {
     }
 
     .hero__text {
-        font-size: 38px;
+        font-size: 24px;
     }
 
     .heading {
         margin-top: 3%;
-        font-size: 44px;
+        font-size: 36px;
         text-align: center;
     }
 
