Added bottom padding on hero

--- a/main.css
+++ b/main.css
@@ -168,15 +168,17 @@ body {
         width: 100vw;
         font-size: 100px;
         text-align: center;
+        padding-bottom: 30px;
     }
 
     .hero__text {
         font-size: 24px;
+        text-align: center;
     }
 
     .heading {
         margin-top: 3%;
-        font-size: 42px;
+        font-size: 40px;
         text-align: center;
     }
 
