--- a/main.css
+++ b/main.css
@@ -10,6 +10,12 @@ body {
 	margin-right: auto;
 }
 
+.line {
+    height: 5px;
+    width: 100%;
+    color: black
+}
+
 .hero {
     height: 100vh;
     width: 100%;
@@ -20,6 +26,7 @@ body {
     font-size: 370px;
     color: cyan;
     padding: 0px 30px 30px 30px;
+    text-align: center;
 }
 
 .hero__text {
@@ -38,29 +45,38 @@ body {
     margin: 2%;
     text-decoration: underline;
     color:black;
+    text-align: center;
 }
 
 .images {
     display: flex;
     justify-content: space-evenly;
+    margin-top: 3%;
+    margin-bottom: 3%;
 }
 
 .images__heading {
     font-family: Helvetica;
-    font-size: 24px;
+    font-size: 28px;
     margin-bottom:5px;
     color: black;
+    font-weight: 800;
 }
 
 .img {
+    display: flex;
+    flex-direction: column;
     width: 47%;
+    align-items: center;
 }
 
-.link {
+a {
+    display: flex;
     font-family: Helvetica;
-    font-size: 24px;
+    font-size: 28px;
     color: black;
     padding-top: 15px;
+    font-weight: 800;
 }
 
 .airbnb__original {
@@ -69,7 +85,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMock.jpg?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .airbnb__mock {
@@ -78,7 +96,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 
@@ -89,7 +109,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .welovedaily__mock {
@@ -98,7 +120,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDailyMock.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .natgeo__original {
@@ -107,7 +131,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .natgeo__mock {
@@ -116,7 +142,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeoMock.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .sill {
@@ -125,7 +153,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Sill.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .chill {
@@ -134,7 +164,9 @@ body {
     background-position: top;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Chill.png?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
 }
 
 .contact {
@@ -142,6 +174,7 @@ body {
     flex-direction: column;
     margin: 2%;
     justify-self: center;
+    justify-content: space-evenly;
 }
 
 .contact__mugshot {
@@ -151,13 +184,62 @@ body {
     background-position: center;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/IMG_6329.JPG?raw=true');
-    border: 2px solid black;
+    border: 5px solid black;
+    margin: 50px;
 }
 
 .contact__text {
     font-family: Helvetica;
-    font-size: 16px;
+    font-size: 26px;
     text-align: center;
+}
+
+@media (max-width: 900px) {
+    .hero {
+        height: 50vh;
+        font-size: 160px;
+        padding: 0px;
+    }
+
+    .hero__text {
+
+    }
+
+    .heading {
+        font-size: 60px;
+    }
+
+    .airbnb__original {
+        height: 360px;
+    }
+
+    .airbnb__mock {
+        height: 360px;
+    }
+
+    .welovedaily__original {
+        height: 360px;
+    }
+
+    .welovedaily__mock {
+        height: 360px;
+    }
+
+    .natgeo__original {
+        height: 360px;
+    }
+
+    .natgeo__mock {
+        height: 360px;
+    }
+    
+    .sill {
+        height: 360px;
+    }
+
+    .chill {
+        height: 360px;
+    }
 }
 
 @media (max-width: 700px) {
@@ -169,7 +251,7 @@ body {
         width: 100vw;
         font-size: 100px;
         text-align: center;
-        padding-bottom: 30px;
+        padding: 30px 0px 30px 0px;
     }
 
     .hero__text {
@@ -183,8 +265,14 @@ body {
         text-align: center;
     }
 
+    .img {
+        width: 42%;
+    }
+
     .images {
-        padding: 5%;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 3%;
     }
 
     .images__heading {
@@ -196,34 +284,34 @@ body {
     }
 
     .airbnb__original {
-        height: 280px;
+        height: 260px;
     }
 
     .airbnb__mock {
-        height: 280px;
+        height: 260px;
     }
 
     .welovedaily__original {
-        height: 280px;
+        height: 260px;
     }
 
     .welovedaily__mock {
-        height: 280px;
+        height: 260px;
     }
 
     .natgeo__original {
-        height: 280px;
+        height: 260px;
     }
 
     .natgeo__mock {
-        height: 280px;
+        height: 260px;
     }
     
     .sill {
-        height: 280px;
+        height: 260px;
     }
 
     .chill {
-        height: 280px;
+        height: 260px;
     }
 }
