--- a/main.css
+++ b/main.css
@@ -261,9 +261,9 @@ a {
 
     .heading {
         margin-top: 3%;
-        font-size: 36px;
+        font-size: 32px;
         text-align: center;
-        font-weight: 500;
+        font-weight: 550;
     }
 
     .img {
@@ -273,7 +273,7 @@ a {
     .images {
         display: flex;
         justify-content: space-evenly;
-        padding: 3%;
+        padding: 0px;
     }
 
     .images__heading {
