--- a/main.css
+++ b/main.css
@@ -268,17 +268,23 @@ a {
     }
 
     .img {
-        width: 42%;
+        width: 90%;
+        align-items: center;
+        margin-left: auto;
+        margin-right: auto;
     }
 
     .images {
         display: flex;
+        flex-direction: column;
         justify-content: space-evenly;
+        align-self: center;
         padding: 0px;
     }
 
     .images__heading {
         font-size: 22px;
+        margin-top: 5%;
     }
 
     .link {
@@ -287,6 +293,7 @@ a {
 
     .airbnb__original {
         height: 260px;
+        width: 90vw;
     }
 
     .airbnb__mock {
@@ -315,5 +322,9 @@ a {
 
     .chill {
         height: 260px;
+    }
+
+    .contact {
+        margin-top: 80px;
     }
 }
