--- a/main.css
+++ b/main.css
@@ -95,7 +95,7 @@ a {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.png?raw=true');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.jpeg?raw=true');
     border: 5px solid black;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -119,7 +119,7 @@ a {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDailyMock.png?raw=true');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDailyMock.jpeg?raw=true');
     border: 5px solid black;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -141,7 +141,7 @@ a {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeoMock.png?raw=true');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeoMock.jpeg?raw=true');
     border: 5px solid black;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -152,7 +152,7 @@ a {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Sill.png?raw=true');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Sill.jp2?raw=true');
     border: 5px solid black;
     margin-top: 5%;
     margin-bottom: 5%;
@@ -163,7 +163,7 @@ a {
     width: 100%;
     background-position: top;
     background-size: cover;
-    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Chill.png?raw=true');
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Chill.jpeg?raw=true');
     border: 5px solid black;
     margin-top: 5%;
     margin-bottom: 5%;
