--- a/main.css
+++ b/main.css
@@ -42,8 +42,7 @@ body {
 .heading {
     font-size: 90px;
     font-family: Helvetica;
-    margin: 2%;
-    text-decoration: underline;
+    margin: 3%;
     color:black;
     text-align: center;
 }
@@ -193,7 +192,32 @@ a {
     font-size: 28px;
     text-align: center;
     font-weight: 800;
+    margin-top: 90px;
 }
+
+.tribe__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.tribe__image {
+    height: 90vh;
+    width: 90%;
+    align-self: center;
+    background-position: center;
+    background-size: cover;
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Screen%20Shot%202019-07-08%20at%205.51.27%20PM.png?raw=true');
+    border: 5px solid black;
+    margin: 50px;
+}
+
+.tribe__text--body {
+    font-size: 36px;
+    font-family: Helvetica;
+    font-weight: 900;
+    text-align: center;
+}
+
 
 @media (max-width: 900px) {
     .hero {
