--- a/main.css
+++ b/main.css
@@ -2,6 +2,11 @@ body {
     margin: 0;
     overflow-x: hidden;
     background-color: cyan;
+    transition-duration: 5s;
+}
+
+body:hover{
+    background-color: deeppink;
 }
 
 .container {
