--- a/main.css
+++ b/main.css
@@ -49,6 +49,10 @@ body:hover{
     margin-top: 10px;
 }
 
+.github {
+    justify-content: center;
+}
+
 @keyframes text {
     0% {
         color: unset;
