--- a/main.css
+++ b/main.css
@@ -49,9 +49,7 @@ body:hover{
     margin-top: 10px;
 }
 
-.github {
-    justify-content: center;
-}
+
 
 @keyframes text {
     0% {
@@ -210,25 +208,19 @@ a:hover{
     margin: 2%;
     justify-self: center;
     justify-content: space-evenly;
+    align-items: center;
 }
 
 .contact__mugshot {
     height: 280px;
     width: 200px;
-    align-self: center;
+    justify-content: center;
+    align-items: center;
     background-position: center;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/IMG_6329.JPG?raw=true');
     border: 5px solid black;
     margin: 50px;
-}
-
-.contact__text {
-    font-family: Helvetica;
-    font-size: 28px;
-    text-align: center;
-    font-weight: 800;
-    margin-top: 90px;
 }
 
 .tribe__container {
@@ -252,6 +244,15 @@ a:hover{
     font-family: Helvetica;
     font-weight: 900;
     text-align: center;
+}
+
+.contact__link {
+    justify-content: center;
+    font-family: Helvetica;
+    font-size: 28px;
+    text-align: center;
+    font-weight: 800;
+    margin-top: 90px;
 }
 
 @media (max-width: 900px) {
