--- a/main.css
+++ b/main.css
@@ -22,13 +22,13 @@ body:hover{
 }
 
 .hero {
-    height: 100vh;
-    width: 100vw;
+    height: 800px;
+    width: 100%;
     background-position: center;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Optimized-backyard.jpeg?raw=true');
     font-family: Helvetica;
-    font-size: 340px;
+    font-size: 300px;
     color: cyan;
     text-align: center;
     letter-spacing: 4px;
@@ -114,6 +114,14 @@ a {
     transition-property: transform;
     transition-timing-function: ease;
     transition-duration: 7s;
+    height: 50vh;
+    width: 100%;
+    background-position: top;
+    background-size: cover;
+    border: 5px solid black;
+    margin-top: 5%;
+    margin-bottom: 5%;
+    transition: 0.5s;
 }
 
 a:hover{
@@ -122,15 +130,7 @@ a:hover{
 }
 
 .airbnb__original {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/AirbnbMockUp.jpg?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .airbnb__original:hover {
@@ -140,15 +140,7 @@ a:hover{
 }
 
 .airbnb__mock {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/airbnbmock.jpg?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .airbnb__mock:hover {
@@ -158,15 +150,7 @@ a:hover{
 }
 
 .welovedaily__original {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDaily.png?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .welovedaily__original:hover {
@@ -176,15 +160,7 @@ a:hover{
 }
 
 .welovedaily__mock {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/WeLoveDailyMock.jpg?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .welovedaily__mock:hover {
@@ -194,15 +170,7 @@ a:hover{
 }
 
 .natgeo__original {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeo.png?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .natgeo__original:hover {
@@ -212,15 +180,7 @@ a:hover{
 }
 
 .natgeo__mock {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/NatGeoMock.jpg?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .natgeo__mock:hover {
@@ -230,15 +190,7 @@ a:hover{
 }
 
 .sill {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Sill.jpg?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .sill:hover {
@@ -248,15 +200,7 @@ a:hover{
 }
 
 .chill {
-    height: 50vh;
-    width: 100%;
-    background-position: top;
-    background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Chill.png?raw=true');
-    border: 5px solid black;
-    margin-top: 5%;
-    margin-bottom: 5%;
-    transition: 0.5s;
 }
 
 .chill:hover {
@@ -272,6 +216,11 @@ a:hover{
     justify-self: center;
     justify-content: space-evenly;
     align-items: center;
+}
+
+.contact__link {
+    border: none;
+    height: 5%;
 }
 
 .contact__mugshot {
@@ -342,15 +291,11 @@ a:hover{
 
 
 
-@media (max-width: 900px) {
+@media (max-width: 1025px) {
     .hero {
-        height: 50vh;
-        font-size: 160px;
+        height: 500px;
+        font-size: 180px;
         padding: 0px;
-    }
-
-    .hero__text {
-
     }
 
     .heading {
@@ -397,7 +342,7 @@ a:hover{
         justify-content: space-evenly;
         height: 50vh;
         width: 100vw;
-        font-size: 100px;
+        font-size: 80px;
         text-align: center;
         padding: 30px 0px 30px 0px;
     }
@@ -408,8 +353,8 @@ a:hover{
     }
 
     .heading {
-        margin-top: 18%;
-        font-size: 32px;
+        /* margin-top: 5%; */
+        font-size: 24px;
         text-align: center;
         font-weight: 550;
     }
@@ -426,12 +371,13 @@ a:hover{
         flex-direction: column;
         justify-content: space-evenly;
         align-self: center;
+        margin: 0px;
         padding: 0px;
     }
 
     .images__heading {
         font-size: 22px;
-        margin-top: 5%;
+        /* margin-top: 5%; */
     }
 
     .link {
@@ -471,7 +417,6 @@ a:hover{
         height: 260px;
     }
 
-    .contact {
-        margin-top: 80px;
-    }
+    /* .contact {
+    } */
 }
