--- a/main.css
+++ b/main.css
@@ -67,6 +67,13 @@ body:hover{
     }
 }
 
+span {
+    font-size: 28px;
+    font-family: Helvetica;
+    color: cyan;
+    font-weight: 900;
+}
+
 .airbnb {
     display: flex;
     flex-direction: column;
@@ -108,7 +115,7 @@ a {
     display: flex;
     font-family: Helvetica;
     font-size: 28px;
-    color: black;
+    color: cyan;
     padding-top: 15px;
     font-weight: 800;
     transition-property: transform;
@@ -278,6 +285,7 @@ a:hover{
     font-family: Helvetica;
     font-weight: 900;
     text-align: center;
+    color: cyan;
 }
 
 .contact__link {
