--- a/main.css
+++ b/main.css
@@ -288,6 +288,39 @@ a:hover{
     color: cyan;
 }
 
+.young__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.young__image {
+    height: 60vh;
+    width: 60%;
+    align-self: center;
+    background-position: center;
+    background-size: cover;
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/youngchop__image.png?raw=true');
+    border: 5px solid black;
+    margin: 50px;
+    transition: 0.5s;
+}
+
+.young__image:hover {
+    z-index: 1;
+    transform: scale(1.25);
+    box-shadow:0 25px 40px rgba(0,0,0,.5);
+}
+
+.young__text--body {
+    font-size: 36px;
+    font-family: Helvetica;
+    font-weight: 900;
+    text-align: center;
+    color: cyan;
+}
+
+
+
 .contact__link {
     justify-content: center;
     font-family: Helvetica;
