--- a/main.css
+++ b/main.css
@@ -294,14 +294,17 @@ a:hover{
 }
 
 .young__image {
+    display: flex;
     height: 60vh;
     width: 60%;
+    justify-content: center;
     align-self: center;
+    align-items: center;
     background-position: center;
     background-size: cover;
     background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/youngchop__image.png?raw=true');
     border: 5px solid black;
-    margin: 50px;
+    margin-left: 350px;
     transition: 0.5s;
 }
 
