--- a/main.css
+++ b/main.css
@@ -333,6 +333,39 @@ a:hover{
     margin-top: 90px;
 }
 
+.clock__container {
+    display: flex;
+    flex-direction: column;
+}
+
+.clock__image {
+    display: flex;
+    height: 60vh;
+    width: 60%;
+    justify-content: center;
+    align-self: center;
+    align-items: center;
+    background-position: center;
+    background-size: cover;
+    background-image: url('https://github.com/YoungVan757/portfolio/blob/master/img/Clock.png?raw=true');
+    border: 5px solid black;
+    transition: 0.5s;
+}
+
+.clock__image:hover {
+    z-index: 1;
+    transform: scale(1.25);
+    box-shadow:0 25px 40px rgba(0,0,0,.5);
+}
+
+.clock__text--body {
+    font-size: 36px;
+    font-family: Helvetica;
+    font-weight: 900;
+    text-align: center;
+    color: cyan;
+}
+
 
 
 @media (max-width: 1025px) {
